<resources>
    <string name="app_name">Lost and Found</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_all_lost_amp_found_items"><![CDATA[Show All Lost & Found Items]]></string>
    <string name="create_a_new_advert">Create A New Advert</string>
    <string name="post_type">Post Type :</string>
    <string name="lost">Lost</string>
    <string name="found">Found</string>
    <string name="save">Save</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="lost_amp_found_items"><![CDATA[LOST & FOUND ITEMS]]></string>
    <string name="call_mobile_no">Call mobile no</string>
    <string name="name">Name</string>
    <string name="remove">Remove</string>
    <string name="no_items_posted_yet">No items posted yet.</string>
    <string name="show_on_map">Show On Map</string>
    <string name="api_key">AIzaSyDOzV1rg0LGt4IXY-Kkr85y35WWYzjhML0</string>
</resources>