<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context=".views.StartFragment">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/createNewAdvert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bg_normal_btn"
        android:text="@string/create_a_new_advert"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        android:fontFamily="monospace"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/showLostAndFound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bg_normal_btn"
        android:text="@string/show_all_lost_amp_found_items"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        android:fontFamily="monospace" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/showLostOnMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bg_normal_btn"
        android:text="@string/show_on_map"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        android:fontFamily="monospace" />

</LinearLayout>