<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.CreateFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:fontFamily="monospace"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/post_type"
                android:layout_gravity="center_vertical"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonLost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/lost"
                    android:fontFamily="monospace"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/radioButtonFound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/found"
                    android:fontFamily="monospace"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </RadioGroup>


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="16sp"
            android:fontFamily="monospace"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="Name"
            android:layout_gravity="center_vertical"/>

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="14sp"
            android:fontFamily="monospace"
            android:textColor="@color/black"
            android:inputType="textPersonName"
            android:background="@drawable/bg_edit_text"
            android:minHeight="45dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="16sp"
            android:fontFamily="monospace"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="Phone"
            android:layout_gravity="center_vertical"/>

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="14sp"
            android:fontFamily="monospace"
            android:textColor="@color/black"
            android:inputType="phone"
            android:background="@drawable/bg_edit_text"
            android:minHeight="45dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="16sp"
            android:fontFamily="monospace"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/description"
            android:layout_gravity="center_vertical"/>

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="14sp"
            android:fontFamily="monospace"
            android:textColor="@color/black"
            android:inputType="textMultiLine"
            android:background="@drawable/bg_edit_text"
            android:minHeight="80dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="16sp"
            android:fontFamily="monospace"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/date"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/datePick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="14sp"
            android:fontFamily="monospace"
            android:textColor="@color/black"
            android:background="@drawable/bg_edit_text"
            android:minHeight="45dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="16sp"
            android:fontFamily="monospace"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/location"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/myLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="14sp"
            android:fontFamily="monospace"
            android:textColor="@color/black"
            android:inputType="textPersonName"
            android:background="@drawable/bg_edit_text"
            android:minHeight="45dp"
            android:gravity="center_vertical"
            app:drawableEndCompat="@drawable/baseline_add_location_alt_black_24dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/saveItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_normal_btn"
            android:text="@string/save"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:fontFamily="monospace"/>

    </LinearLayout>

</ScrollView>